--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@auth/core": "^0.39.0",
     "@auth/mongodb-adapter": "^3.9.0",
+    "@aws-sdk/credential-providers": "^3.817.0",
     "@hookform/resolvers": "^3.9.0",
+    "@mongodb-js/zstd": "^2.0.1",
     "@next/swc-wasm-nodejs": "13.5.1",
     "@openrouter/ai-sdk-provider": "^0.4.5",
     "@prisma/client": "^6.7.0",
@@ -53,6 +55,7 @@
     "@types/react-dom": "18.2.7",
     "ai": "^4.3.15",
     "autoprefixer": "10.4.15",
+    "aws4": "^1.13.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -62,9 +65,12 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "framer-motion": "^12.10.4",
+    "gcp-metadata": "^5.3.0",
     "input-otp": "^1.2.4",
+    "kerberos": "^2.2.2",
     "lucide-react": "^0.446.0",
     "mongodb": "^6.16.0",
+    "mongodb-client-encryption": "^6.4.0",
     "next": "^15.3.2",
     "next-auth": "^5.0.0-beta.27",
     "next-themes": "^0.3.0",
@@ -78,6 +84,8 @@
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
+    "snappy": "^7.2.2",
+    "socks": "^2.8.4",
     "sonner": "^1.5.0",
     "stripe": "^18.1.0",
     "tailwind-merge": "^2.5.2",
